# musync

./: .gitignore  .gitlab-ci.yml  CHANGELOG.md  INSTALL  README.md  pyproject.toml  setup.py
.cursor/agents/: atlas.md  explore.md  generalPurpose.md  librarian.md  momus.md  oracle.md  sisyphus.md
.cursor/rules/: fastapi-python.mdc  specify-rules.mdc
.specify/memory/: constitution.md
.specify/templates/: plan-template.md
docs/: architecture.md  configuration.md  introduction.md  mechanism.md
musync/: __init__.py  commons.py  custom.py  dbman.py  errors.py  hints.py  locker.py  op.py  opts.py  printer.py  rulelexer.py  sign.py
musync/formats/: __init__.py  id3.py  meta.py  mp4.py  oggvorbis.py
share/: musync.rules  musync.sed
tests/: __init__.py  conftest.py  test_commons.py  test_commons_extended.py  test_commons_walk.py  test_custom.py  test_custom_extended.py  test_dbman.py  test_entrypoint_complete.py  test_errors.py  test_fix_operations.py  test_formats.py  test_formats_meta.py  test_hints.py  test_locker.py  test_locker_additional.py  test_main.py  test_main_complete.py  test_main_operations.py  test_main_operations_complete.py  test_main_operations_extended.py  test_op.py  test_opts.py  test_printer.py  test_rulelexer.py  test_sign.py
