[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "Musync"
version = "0.6.2"
description = "Music Synchronizer"
readme = "README.md"
requires-python = ">=3.7"
license = {text = "GPLv3"}
authors = [
    {name = "John-John Tedro", email = "johnjohn.tedro@gmail.com"}
]
keywords = ["music"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Multimedia :: Sound/Audio",
]

dependencies = [
    "mutagen>=1.30",
    "click>=8.0.0",
]

[project.optional-dependencies]
korean = ["korean_romanizer"]
japanese = ["pykakasi"]

[project.scripts]
musync = "musync:entrypoint"

[tool.setuptools]
packages = ["musync", "musync.formats"]
include-package-data = true
zip-safe = true

[tool.setuptools.package-data]
musync = ["*.conf", "*.rules", "*.sed"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--strict-markers",
    "--tb=short",
]

[tool.coverage.run]
source = ["musync"]
omit = [
    "*/tests/*",
    "*/test_*.py",
    "*/__pycache__/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "@abstractmethod",
]

[tool.uv]
dev-dependencies = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "pytest-mock>=3.10.0",
]
