[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "Musync"
version = "0.6.2"
description = "Music Synchronizer"
readme = "README.md"
requires-python = ">=3.12"
license = {text = "GPLv3"}
authors = [
    {name = "John-John Tedro", email = "johnjohn.tedro@gmail.com"}
]
keywords = ["music"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Multimedia :: Sound/Audio",
]

dependencies = [
    "mutagen>=1.30",
    "click>=8.0.0",
    "pytest>=7.4.4",
    "coverage>=7.2.7",
]

[project.optional-dependencies]
jp = ["pykakasi>=2.2.1"]
kr = ["korean-romanizer>=0.28.0"]
zh = ["pypinyin>=0.55.0"]

cjk = [
  "pykakasi>=2.2.1",
  "korean-romanizer>=0.28.0",
  "pypinyin>=0.55.0"
]

[project.scripts]
musync = "musync:entrypoint"

[tool.setuptools]
packages = ["musync", "musync.formats"]
include-package-data = true
zip-safe = true

[tool.setuptools.package-data]
musync = ["*.conf", "*.rules", "*.sed"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--strict-markers",
    "--tb=short",
]

[tool.coverage.run]
source = ["musync"]
omit = [
    "*/tests/*",
    "*/test_*.py",
    "*/__pycache__/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "@abstractmethod",
]

[tool.uv]
dev-dependencies = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "pytest-mock>=3.10.0",
]

[[tool.uv.index]]
name = "pypi-proxy"
url = "http://stinkbox:5005/index/"
default = true
